# WHS-Help-Bot

./: .env  .gitignore  CNAME  Cargo.toml  README.md  config.toml
migrations/classes/: up.sql
migrations/users/: up.sql
src/: bin.rs  bot_data.rs  commands.rs  config.rs  db.rs  lib.rs  main.rs  model.rs  status_logger.rs  util.rs
src/commands/: classes.rs  errors.rs  groups.rs  help.rs  induct.rs  mod.rs  register.rs  say.rs  users.rs
src/commands/checks/: mod.rs
src/commands/classes/: add.rs  edit.rs  join.rs  leave.rs  list.rs  mine.rs  mod.rs  remove.rs
src/db/: mod.rs  models.rs  schema.rs
src/db/model/: category.rs  class.rs  mod.rs
src/discord/: embeds.rs  events.rs  framework.rs  mod.rs
src/discord/checks/: admin.rs
src/discord/commands/: classes.rs  groups.rs  help.rs  mod.rs
src/sql/: category.sql  class.sql  group.sql
src/sql/query/: all_classes.sql  all_groups.sql  count_all_classes.sql  filter_classes_by_roles.sql  search_classes.sql  search_groups.sql
src/sql/schema/: class.sql  group.sql
