[package]
name = "whshistory_bot"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.7.0"
serde = { version = "1.0.101", features = ["derive"] }
toml = "0.5.3"
diesel = { version = "1.4.2", features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.14.1"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"]}
uuid = { version = "0.7.4", features = ["v4", "serde"] }

[lib]
name = "bot_framework"
path = "src/lib.rs"

[[bin]]
name = "bot_binary"
path = "src/bin.rs"
