[package]
name = "whshistory_bot"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.7.1"
serde = { version = "1.0.101", features = ["derive"] }
toml = "0.5.3"
diesel = { version = "1.4.3", features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.14.1"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"]}
threadpool = "1.7.1"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin.rs"
