[package]
name = "help_bot"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.7.2"
serde = { version = "1.0.101", features = ["derive"] }
toml = "0.5.3"
dotenv = "0.15.0"
rusqlite = { version = "0.20.0", features = ["bundled", "trace"]}
threadpool = "1.7.1"
log = "0.4"
pretty_env_logger = "0.3"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin.rs"
